syntax = "proto3";
option java_multiple_files = true;
option java_package = "sep3.g3.rightoversjava.grpc.generated";
package sep3.g3;

message FoodPostRequest {
  string title = 1;
  string category_ = 2;
  string description = 3;
  string pictureUrl = 4;
  int32 daysUntilExpired = 5;
}

message FoodPostResponse {
  int32 fp_id = 1;
  string title = 2;
  string category_ = 3;
  string description = 4;
  string pictureUrl = 5;
  int32 daysUntilExpired = 6;
  string fp_state = 7;
}

service FoodPostService {
  rpc post(FoodPostRequest) returns (FoodPostResponse);
}